--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -19,11 +19,15 @@ h1 {
   border-radius: 180%;
 }
 
-h3 img {
-  width: 500px;
-  height: 500px;
-  border-radius: 45%;
+.product {
+  width: 400px;
+  text-align: center;
   margin: auto;
-  
+}
+
+.product img {
+  border-radius: 45%;
+  width: 400px;
+  height: 400px;
 }
 
