added new and create actions

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -12,7 +12,12 @@
 h1 {
     text-align: center;
 }
-
+.main {
+  margin-top: auto;
+  margin-right: 5px;
+  margin-bottom: auto;
+  margin-left: 5px;
+}
 .main img {
   width: 250px;
   height: 250px;
