added edit and update actions

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.div {
+  margin-top: auto;
+  margin-right: 5px;
+  margin-bottom: auto;
+  margin-left: 5px;
+}
 
 .carousel-inner img{
   width: 50%;
