--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,6 @@
 <h2> Use this form for adding a new product </h2>
 
-<%= form_tag '/products', meohod: :post do %>
+<%= form_tag '/products', method: :post do %>
   <div>
   <%= label_tag :name %>
   <%= text_field_tag :name %>
