created destroy action

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -2,12 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.div {
-  margin-top: auto;
-  margin-right: 5px;
-  margin-bottom: auto;
-  margin-left: 5px;
-}
+
+// .background {
+//   background: url(http://hdw.datawallpaper.com/abstract/nuts-desktop-background-573673.jpg) no-repeat;
+//   width: auto; 
+//   margin: auto;
+//   opacity: .5;
+// }
 
 .carousel-inner img{
   width: 50%;
