--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,5 +6,8 @@
   <h3><%= @nut.price %></h3>
   <h3><%= @nut.description %></h3>
   <%= link_to "Edit this page", "/products/#{@nut.id}/edit" %>
+  </br>
+  <%= link_to "Delete this item", "/products/#{@nut.id}", method: :delete %>
+
 
 </div>
