added redirect to create, update and delete actions

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -5,9 +5,9 @@
 
 // .background {
 //   background: url(http://hdw.datawallpaper.com/abstract/nuts-desktop-background-573673.jpg) no-repeat;
-//   width: auto; 
-//   margin: auto;
-//   opacity: .5;
+//   background-size: 100%;
+//   overflow: scroll;
+//   position: relative;
 // }
 
 .carousel-inner img{
