updated background image and inversed navbar

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,4 +1,8 @@
 body {
   font-family: Georgia,Times,"Times New Roman",serif;
-  background-image: url("grey_wash_wall.png");
+  background-image: url("diagonales_decalees.png");
+}
+
+.navbar {
+  position: relative;
 }
