--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,47 +1,49 @@
 <!-- This is the full product page for all nuts -->
+
 <div class="background">
   
+  <div class="main_container">
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
 
-  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="http://www.glossophilia.org/wp-content/uploads/nuts.jpg" alt="lots of nuts">
+        </div>
+        <div class="item">
+          <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQssZQ3wJhnnndEAGwQ7SRgghY7X5dQQhRBd70Kqb2EFTL6oWlS3Q" alt="n.u.t.s.">
+        </div>
+      </div>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="http://www.glossophilia.org/wp-content/uploads/nuts.jpg" alt="lots of nuts">
-      </div>
-      <div class="item">
-        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQssZQ3wJhnnndEAGwQ7SRgghY7X5dQQhRBd70Kqb2EFTL6oWlS3Q" alt="n.u.t.s.">
-      </div>
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
 
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-
-  <div class="header">
-    <h1> Kim's Gone Nuts!!</h1>
-  </div>
-  <div class="main">
-    <%= link_to "Add New Product", "/products/new" %>
-    <% @nuts.each do |nut| %>
-    <a href="/products/<%= nut.id %>"><h2><%= nut.name.capitalize %></h2></a>
-    <!-- INSERT LINK TO OPTION HERE-->
-    <h3><img src="<%= nut.image %>"></h3>
-    <h3><%= nut.price %></h3>
-    <h3><%= nut.description %></h3> 
-    <% end %>
+    <div class="header">
+      <h1> Kim's Gone Nuts!!</h1>
+    </div>
+    <div class="main">
+      <%= link_to "Add New Product", "/products/new" %>
+      <% @nuts.each do |nut| %>
+      <a href="/products/<%= nut.id %>"><h2><%= nut.name.capitalize %></h2></a>
+      <!-- INSERT LINK TO OPTION HERE-->
+      <h3><img src="<%= nut.image %>"></h3>
+      <h3><%= nut.price %></h3>
+      <h3><%= nut.description %></h3> 
+      <% end %>
+    </div>
   </div>
 </div>
