added sales message to product show pages

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -60,7 +60,7 @@ $dropDown       : true;
     &:hover {
       color: $colHighlight; }}}
 @media (max-width: 767px) {
-  .navbar-default .navbar-nav .open .dropdown-menu {
+  .navbar-inverse .navbar-nav .open .dropdown-menu {
     > li > a {
       color: $colDefault;
       &:hover, &:focus {
