--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,7 +3,7 @@
 
   <h1><%= @nut.name.capitalize %></h1>
   <div class="product"><img src="<%= @nut.image %>"></div>
-  <h3><%= @nut.price %></h3>
+  <h3><%= @nut.price %><%= @nut.sale_message %></h3>
   <h3><%= @nut.description %></h3>
   <%= link_to "Edit this page", "/products/#{@nut.id}/edit" %>
   </br>
