--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Kim's Nuts</a>
+        <a class="navbar-brand" href="/products">Kim's Nuts</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
