--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,10 +3,10 @@
 <div class="product_page">
   <h1><%= @nut.name.capitalize %></h1>
   <div class="product"><img src="<%= @nut.image %>"></div>
-  <h3><%= @nut.price %><%= @nut.sale_message %></h3>
+  <h3><%= number_to_currency(@nut.price) %><%= @nut.sale_message %></h3>
   <h3><%= @nut.description %></h3>
   
-  <h4>Tax amount: <%= @nut.tax.round(2) %> </h4>
+  <h4>Tax amount: <%= number_to_currency(@nut.tax.round(2)) %> </h4>
   <h4>Total price: <%= number_to_currency(@nut.total) %></h4>
 <div class="row">
     <div class="col-md-3">
