--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,9 @@
           <li class="active"><a href="#">Products <span class="sr-only">(current)</span></a></li>
           <li><a href="#">Blog</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Nut Options <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sort Nuts <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">By Nut</a></li>
+              <li><a href="/products?sort=price">Price - low to high</a></li>
               <li><a href="#">Gift sets</a></li>
               <li><a href="#">Health/Beauty</a></li>
               <li class="divider"></li>
