Added Random product sorter to nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,10 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sort Nuts <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="/products?sort=price">Price - low to high</a></li>
-              <li><a href="#">Gift sets</a></li>
-              <li><a href="#">Health/Beauty</a></li>
+              <li><a href="/products?sort_order=price">Price - high to low</a></li>
+              <li><a href="/products?discount=true">Discount Items</a></li>
               <li class="divider"></li>
-              <li><a href="#">For the Home</a></li>
+              <li><a href="/products/random">Random Product</a></li>
               <li class="divider"></li>
               <li><a href="#">On the Go</a></li>
             </ul>
