--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -56,7 +56,7 @@
             </ul>
           </li>
         </ul>
-         <button type="button" class="btn btn-default navbar-btn">Sign in/Register</button>
+        <button type="button" class="btn btn-default navbar-btn">Sign in/Register</button>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
@@ -69,6 +69,13 @@
       <%= message %>
     </div>
     <% end %>
+
+    <%= form_tag '/search', method: :post do %>
+    <%= label_tag :search %>
+    <%= text_field_tag :search %>
+    <%= submit_tag "Search" %>
+    <% end %>
+
     <%= yield %> <!-- replaced by individual views -->
   </div>
 </body>
