--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,13 +39,12 @@
             </ul>
           </li>
         </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        <ul class="nav navbar-nav">
+            <%= form_tag '/search', method: :post do %>
+    <%= label_tag :search %>
+    <%= text_field_tag :search %>
+    <%= submit_tag "Search" %>
+    <% end %>
+        <!-- <ul class="nav navbar-nav">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Other Resources <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -55,7 +54,7 @@
               <li class="divider"></li>
             </ul>
           </li>
-        </ul>
+        </ul> -->
         <button type="button" class="btn btn-default navbar-btn">Sign in/Register</button>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -70,11 +69,7 @@
     </div>
     <% end %>
 
-    <%= form_tag '/search', method: :post do %>
-    <%= label_tag :search %>
-    <%= text_field_tag :search %>
-    <%= submit_tag "Search" %>
-    <% end %>
+
 
     <%= yield %> <!-- replaced by individual views -->
   </div>
