--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,6 +2,7 @@
 
 <div class="product_page">
   <h1><%= @nut.name.capitalize %></h1>
+  <h4>Imported from: <%= @nut.supplier.name %></h4>
   <div class="product"><img src="<%= @nut.image %>"></div>
   <h3><%= number_to_currency(@nut.price) %><%= @nut.sale_message %></h3>
   <h3><%= @nut.description %></h3>
