Added Confirmation page

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -70,3 +70,7 @@ $dropDown       : true;
         color: $colHighlight;
         background-color: $bgHighlight; }}}
 }
+
+.checkout_form{
+  padding: 75px;
+}
