--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -7,9 +7,15 @@
   </div>
 
   <div>
-  <%= label_tag :image %>
+  <%= label_tag :image_1 %>
   <!-- <%= file_field_tag :image %> -->
-  <%= text_field_tag :image %>
+  <%= text_field_tag :image_1 %>
+  </div>
+
+  <div>
+  <%= label_tag :image_2 %>
+  <!-- <%= file_field_tag :image %> -->
+  <%= text_field_tag :image_2 %>
   </div>
 
   <div>
