--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -2,9 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#carousel-example-generic {
+  min-height: 200px;
+}
+
 .carousel-inner img{
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
   margin: auto;
 }
 
