--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,33 +2,51 @@
 
 <div class="product_page">
   <div class="row">
-        
-  <h1><%= @nut.name.capitalize %></h1>
-  <h4>Imported from: <%= @nut.supplier.name %></h4>
-  
-  <% @nut.images.each do |image| %>
-  <div class="col-md-6">
-  <div class="product">
-  <%= image_tag image.image_url %></div>
-  </div>
-  <% end %>
-  </div>
+
+    <h1><%= @nut.name.capitalize %></h1>
+    <h4>Imported from: <%= @nut.supplier.name %></h4>
+
+    <% @nut.images.each do |image| %>
+    <div class="col-md-6">
+      <div class="product">
+        <%= image_tag image.image_url %></div>
+      </div>
+      <% end %>
+    </div>
 
 
-  <h3><%= number_to_currency(@nut.price) %><%= @nut.sale_message %></h3>
-  <h3><%= @nut.description %></h3>
-  
-  <h4>Tax amount: <%= number_to_currency(@nut.tax.round(2)) %> </h4>
-  <h4>Total price: <%= number_to_currency(@nut.total) %></h4>
-<div class="row">
-    <div class="col-md-3">
- <button type="button" class="btn btn-success"> <%= link_to "Edit this page", "/products/#{@nut.id}/edit" %></button>
- </div>
-    <div class="col-md-3">
+    <h3><%= number_to_currency(@nut.price) %><%= @nut.sale_message %></h3>
+    <h3><%= @nut.description %></h3>
+
+    <h4>Tax amount: <%= number_to_currency(@nut.tax.round(2)) %> </h4>
+    <h4>Total price: <%= number_to_currency(@nut.total) %></h4>
+    <div class="row">
+      <div class="col-md-3">
+       <button type="button" class="btn btn-success"> <%= link_to "Edit this page", "/products/#{@nut.id}/edit" %></button>
+     </div>
+     <div class="col-md-3">
+     </div>
+     <div class="col-md-3">
+     </div>
+     <div class="col-md-3">
+      <button type="button" class="btn btn-default"><%= link_to "Delete this item", "/products/#{@nut.id}", method: :delete %></button>
     </div>
-    <div class="col-md-3">
+
+    <div class="checkout_form">
+    <h1>PURCHASE THIS ITEM NOW </h1>
+      <%= form_tag '/orders', method: :post do %>
+      <div>
+        <%= label_tag :quantity %>
+        <%= text_field_tag :quantity %>
+      </div>
+            <div>
+        <%= label_tag :product_id, "Product ID" %>
+        <%= text_field_tag :product_id, @nut.id %>
+      </div>
+
+      <div>
+      <%= submit_tag "Buy Now" %>
+      </div>
     </div>
-    <div class="col-md-3">
-  <button type="button" class="btn btn-default"><%= link_to "Delete this item", "/products/#{@nut.id}", method: :delete %></button>
+    <% end %>
   </div>
-</div>
