--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -41,7 +41,7 @@
       </div>
             <div>
         <%= label_tag :product_id, "Product ID" %>
-        <%= text_field_tag :product_id, @nut.id %>
+        <%= hidden_field_tag :product_id, @nut.id %>
       </div>
 
       <div>
