Added category to show page and navbar that works

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,6 +5,9 @@
 
     <h1><%= @nut.name.capitalize %></h1>
     <h4>Imported from: <%= @nut.supplier.name %></h4>
+    Category: <% @nut.categories.each do |category| %> 
+    <%= category.name %>
+    <% end %>
 
     <% @nut.images.each do |image| %>
     <div class="col-md-6">
