--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,8 @@
               <li><a href="/products?discount=true">Discount Items</a></li>
               <li class="divider"></li>
               <% Category.all.each do |category| %>
-              <li><a href="/products?category=<% category.name %>"><%= category.name %></a></li><% end %>
+              <li><a href="/products?category=<%= category.name %>"><%= category.name %></a></li>
+              <% end %>
               <li class="divider"></li>
               <li><a href="#">On the Go</a></li>
             </ul>
