Added functionality notifying of empty cart, Adding shopping cart to navbar, changed look of order show page.

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,10 +3,17 @@
 <h3>Here's your order details:</h3>
 
 <div>
-<h4>Your order number is: <%= 500 + @order.id %></h4>
-<h4> Subtotal: <%= number_to_currency(@order.subtotal) %></h4>
-<h4> Tax: <%= number_to_currency(@order.tax) %></h4>
-<h4> Total: <%= number_to_currency(@order.total_price) %></h4>
-<h4> Ordered by: <%= current_user.email %></h4>
+  <h4>Your order number ID: <%= 500 + @order.id %></h4>
+  <h4> Subtotal: <%= number_to_currency(@order.subtotal) %></h4>
+  <h4> Tax: <%= number_to_currency(@order.tax) %></h4>
+  <h4> Total: <%= number_to_currency(@order.total_price) %></h4>
+  <h4> Ordered by: <%= current_user.email %></h4>
+</div>
 
+<div>
+  <h2>Order Details:</h2>
+  <% @order.carted_products.each do |carted_product| %>
+  <h5>Item: <%= carted_product.product.name %></h5>
+  <h5>Quantity: <%= carted_product.quantity %></h5>
+  <% end %>
 </div>
