--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,7 @@
 
        <li><%= link_to "Sign In", "/users/sign_in" if not current_user %></li>
        <li><%= link_to "Sign Up", "/users/sign_up" if not current_user %></li>
+       <li><span class="glyphicon glyphicon-shopping-cart"></span><%= link_to "Shopping Cart", "/carted_products" %></li>
        </ul>
        </div>
 
