--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -37,26 +37,27 @@
     </div>
 
     <div class="main">
-
-      <%= link_to "Add New Product", "/products/new" %>
-      <div class="row">
+     <% if current_user.admin %>
+     <%= link_to "Add New Product", "/products/new" %>
+     <% end %>
+     <div class="row">
 
       <% @nuts.each do |nut| %>
-        <div class="col-md-3">
+      <div class="col-md-3">
         
-          <a href="/products/<%= nut.id %>"><h2><%= nut.name.capitalize %></h2></a>
-          <!-- INSERT LINK TO OPTION HERE-->
-          
-          <%= image_tag nut.images.first.image_url %>
-          
-          <h3><%= number_to_currency(nut.price) %></h3>
-          <h3><%= nut.description %></h3> 
-          </div>
+        <a href="/products/<%= nut.id %>"><h2><%= nut.name.capitalize %></h2></a>
+        <!-- INSERT LINK TO OPTION HERE-->
+        
+        <%= image_tag nut.images.first.image_url %>
+        
+        <h3><%= number_to_currency(nut.price) %></h3>
+        <h3><%= nut.description %></h3> 
+      </div>
       <% end %>
 
 
-        
-      </div>
+      
     </div>
   </div>
+</div>
 </div>
