Only authorized users may add items to a shopping cart - logged in requirement

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,9 @@
 
          <li><%= link_to "Sign In", "/users/sign_in" if not current_user %></li>
          <li><%= link_to "Sign Up", "/users/sign_up" if not current_user %></li>
+         <% if user_signed_in? %>
          <li><span class="glyphicon glyphicon-shopping-cart"></span><%= link_to "Shopping Cart", "/carted_products" %></li>
+         <% end %>
        </ul>
      </div>
 
