--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <!-- This is the full product page for all nuts -->
 
 <div class="background">
-  
+
   <div class="main_container">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
@@ -37,26 +37,26 @@
     </div>
 
     <div class="main">
-     <% if current_user.admin %>
+    <% if user_signed_in? && current_user.admin %>
      <%= link_to "Add New Product", "/products/new" %>
      <% end %>
      <div class="row">
 
       <% @nuts.each do |nut| %>
       <div class="col-md-3">
-        
+
         <a href="/products/<%= nut.id %>"><h2><%= nut.name.capitalize %></h2></a>
         <!-- INSERT LINK TO OPTION HERE-->
-        
+
         <%= image_tag nut.images.first.image_url %>
-        
+
         <h3><%= number_to_currency(nut.price) %></h3>
         <h3><%= nut.description %></h3> 
       </div>
       <% end %>
 
 
-      
+
     </div>
   </div>
 </div>
