--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,31 +25,33 @@
     <h4>Total price: <%= number_to_currency(@nut.total) %></h4>
     <div class="row">
       <div class="col-md-3">
-      <% if current_user.admin %>
-       <button type="button" class="btn btn-success"> <%= link_to "Edit this page", "/products/#{@nut.id}/edit" %></button><% end %>
+        <% if user_signed_in? && current_user.admin %>
+        <button type="button" class="btn btn-success"> <%= link_to "Edit this page", "/products/#{@nut.id}/edit" %></button><% end %>
+      </div>
+      <div class="col-md-3">
+      </div>
+      <div class="col-md-3">
+      </div>
+      <div class="col-md-3">
+       <% if user_signed_in? && current_user.admin %>
+       <button type="button" class="btn btn-default"><%= link_to "Delete this item", "/products/#{@nut.id}", method: :delete %></button>
+       <% end %>
      </div>
-     <div class="col-md-3">
-     </div>
-     <div class="col-md-3">
-     </div>
-     <div class="col-md-3">
-      <button type="button" class="btn btn-default"><%= link_to "Delete this item", "/products/#{@nut.id}", method: :delete %></button>
-    </div>
 
-    <div class="checkout_form">
-    <h1>PURCHASE THIS ITEM NOW </h1>
+     <div class="checkout_form">
+      <h1>PURCHASE THIS ITEM NOW </h1>
       <%= form_tag '/carted_products', method: :post do %>
       <div>
         <%= label_tag :quantity %>
         <%= text_field_tag :quantity %>
       </div>
-            <div>
+      <div>
         
         <%= hidden_field_tag :product_id, @nut.id %>
       </div>
 
       <div>
-      <%= submit_tag "Add to Cart" %>
+        <%= submit_tag "Add to Cart" %>
       </div>
     </div>
     <% end %>
