Added sad paths and ensured fields retained their values

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,6 +19,12 @@
         <div class="item">
           <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQssZQ3wJhnnndEAGwQ7SRgghY7X5dQQhRBd70Kqb2EFTL6oWlS3Q" alt="n.u.t.s.">
         </div>
+        <div class="item">
+        <img src="http://www.theveganwoman.com/wp-content/uploads/2012/11/Healthy-Reason-to-Love-Nuts-and-Seeds.jpg" alt="more nuts">
+        </div>
+        <div class="item">
+          <img src="http://bestmedicinenews.org/wp-content/uploads/2015/05/peanut_inside-226x300.jpg" alt="kids like nuts">
+        </div>
       </div>
 
       <!-- Controls -->
