--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,17 @@
 <!--This is the individual product page for each nut -->
 
+<% if @carted_product && @carted_product.errors.any? %>
+<div id="error_explanation">
+<h2><%= pluralize(@carted_product.errors.count, "error") %> prohibited this nut from being added to your cart:</h2>
+
+  <ul>
+    <% @carted_product.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
+
 <div class="product_page">
   <div class="row">
 
@@ -43,10 +55,10 @@
       <%= form_tag '/carted_products', method: :post do %>
       <div>
         <%= label_tag :quantity %>
-        <%= text_field_tag :quantity %>
+        <%= text_field_tag :quantity, @carted_product ? @carted_product.quantity : nil %>
       </div>
       <div>
-        
+
         <%= hidden_field_tag :product_id, @nut.id %>
       </div>
 
