--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -3,12 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #carousel-example-generic {
-  min-height: 200px;
+  min-height: 300px;
 }
 
 .carousel-inner img{
   width: 400px;
-  height: 400px;
+  min-height: 300px;
+  max-height: 300px;
   margin: auto;
 }
 
